[package]
name = "rusty_crypt"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "rusty_crypt"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
aes-gcm = { version = "0.9.4", features = ["aes", "heapless"], default-features = false }
ccm = "0.4.4"
chacha20poly1305 = "0.9.0"
cmac = "0.7.1"
crypto-common = "0.1.3"
hmac = "0.12.1"
num-bigint = "0.4.3"
poly1305_lib = { version = "0.7.2",  package = 'poly1305'}
rand = { version = "0.8.5", features = ["small_rng"] }
rustler = "0.25.0"
rustler_sys = "2.2.0"
sha2 = "0.10.2"
sha3 = "0.10.1"
typenum = "1.15.0"
